--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ repository = "https://github.com/TanTanDev/game_stat.git"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[features]
+default = []
+sync = []
