fix: `keyword` -> `keywords` in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "game_stat"
 version = "0.1.1"
 edition = "2021"
 categories = ["game-development"]
-keyword = ["gamedev", "stats"]
+keywords = ["gamedev", "stats"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 description = "a library for handling stats that can change with modifiers, most commonly seen in games"
