--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ repository = "https://github.com/TanTanDev/game_stat.git"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
 
 [features]
-default = []
+default = ["serde"]
 sync = []
+serde = ["dep:serde"]
