--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = "https://github.com/TanTanDev/game_stat.git"
 
 [dependencies]
 serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
+tinyvec = {version = "1.6", features = ["alloc", "rustc_1_55"] }
 
 [features]
 default = ["serde"]
